# retro-games

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/: alien_attack.ica  heart.ici  invader1.ica  invader1.ici  invader2.ica  invader2.ici  invader3.ica  invader3.ici  ufo.ica
assets/icons/: cntr_a.ici  cntr_b.ici  cntr_dpad.ici  cntr_horz.ici  cntr_o.ici  cntr_vert.ici  cntr_x.ici  key_dpad.ici  key_esc.ici  key_escape.ici  key_horz.ici  key_space.ici  key_vert.ici
src/: button_bar.rs  invaders.rs  main.rs  menu.rs  pong.rs  snake.rs  sound_effect.rs
src/games/: invaders.rs  menu.rs  mod.rs  pong.rs  snake.rs
