[package]
name = "games"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Emma Britton <emmabritton@pm.me>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["games", "pixels", "retro"]
categories = ["games"]
description = "A few simple games implemented using pixels-graphics-lib"

[dependencies]
pixels-graphics-lib = "0.12.0"
log = "0.4.20"
env_logger = "0.10.1"
color-eyre = "0.6.2"
fastrand = "2.0.1"
audio-engine = "0.4.5"