[package]
name = "games"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Emma Britton <emmabritton@pm.me>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["games", "pixels", "retro"]
categories = ["games"]
description = "A few simple games implemented using pixels-graphics-lib"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
pixels-graphics-lib = { version = "0.15.2", features = ["controller"] }
log = "0.4.20"
env_logger = "0.10.1"
color-eyre = "0.6.2"
fastrand = "2.0.1"
fnv = "1.0.7"